# Telegram-iOS

./: .bazelrc  .gitignore  MODULE.bazel  README.md  crowdin.yml  user.bazelrc.example
.github/scripts/: inject_symbols.py
.github/workflows/: main.yml
ExteraGram/ChatControllerImplExtension/Sources/: ChatControllerImplExtension.swift
ExteraGram/EGAPI/: BUILD
ExteraGram/EGAPI/Sources/: EGAPI.swift
ExteraGram/EGAPIToken/: BUILD
ExteraGram/EGAPIToken/Sources/: EGAPIToken.swift
ExteraGram/EGAPIWebSettings/: BUILD
ExteraGram/EGAPIWebSettings/Sources/: File.swift
ExteraGram/EGActionRequestHandlerSanitizer/: BUILD
ExteraGram/EGActionRequestHandlerSanitizer/Sources/: File.swift
ExteraGram/EGAppBadgeOffset/: BUILD
ExteraGram/EGAppBadgeOffset/Sources/: EGAppBadgeOffset.swift
ExteraGram/EGAppGroupIdentifier/Sources/: EGAppGroupIdentifier.swift
ExteraGram/EGBadges/: BUILD
ExteraGram/EGBadges/Sources/: BadgeModels.swift  BadgesController.swift
ExteraGram/EGChatListSimpleSettingsSignal/: BUILD
ExteraGram/EGChatListSimpleSettingsSignal/Sources/: EGCompactMessagePreviewLayout.swift
ExteraGram/EGConfig/Sources/: File.swift
ExteraGram/EGContentAnalysis/: BUILD
ExteraGram/EGDBReset/Sources/: File.swift
ExteraGram/EGDebugUI/: BUILD
ExteraGram/EGDebugUI/Sources/: EGDebugUI.swift
ExteraGram/EGDoubleTapMessageAction/Sources/: EGDoubleTapMessageAction.swift
ExteraGram/EGGHSettings/: BUILD
ExteraGram/EGGHSettings/Sources/: EGGHSettings.swift
ExteraGram/EGIAP/: BUILD
ExteraGram/EGIAP/Sources/: EGIAP.swift
ExteraGram/EGIQTP/Sources/: EGIQTP.swift
ExteraGram/EGInputToolbar/Sources/: EGInputToolbar.swift
ExteraGram/EGItemListUI/Sources/: EGItemListUI.swift  SliderPercentageItem.swift
ExteraGram/EGKeychainBackupManager/: BUILD
ExteraGram/EGLogging/: BUILD
ExteraGram/EGLogging/Sources/: EGCrashCatcher.swift  EGLogger.swift
ExteraGram/EGLoggingComposer/: BUILD
ExteraGram/EGLoggingComposer/Sources/: EGLoggingComposer.swift
ExteraGram/EGNY/Sources/: EGNY.swift
ExteraGram/EGPayWall/: BUILD
ExteraGram/EGPayWall/Sources/: EGPayWall.swift
ExteraGram/EGProUI/: BUILD
ExteraGram/EGProUI/Sources/: AppBadgeSelectorController.swift  EGProUI.swift  MessageFilterController.swift
ExteraGram/EGRecentSessionApiId/Sources/: EGRecentSessionApiId.swift  EGRecentSessionApiIdItem.swift
ExteraGram/EGRegDate/: BUILD
ExteraGram/EGRequests/: BUILD
ExteraGram/EGSettingsUI/: BUILD
ExteraGram/EGSharedAccountContextMigration/: BUILD
ExteraGram/EGShowMessageJson/: BUILD
ExteraGram/EGSimpleSettings/: BUILD
ExteraGram/EGStrings/: BUILD
ExteraGram/EGSwiftSignalKit/: BUILD
ExteraGram/EGTranslationLangFix/: BUILD
ExteraGram/EGWebAppExtensions/: BUILD
ExteraGram/FixConcurrencyBackport/: BUILD  concurrency-dylib.patch
ExteraGram/Playground/: BUILD  README.md  generate_project.py
Swiftgram/Playground/: BUILD  README.md
Swiftgram/SGAPI/: BUILD
Swiftgram/SGAPIWebSettings/: BUILD
Swiftgram/SGAppGroupIdentifier/: BUILD
Swiftgram/SGConfig/: BUILD
Swiftgram/SGDBReset/: BUILD
Swiftgram/SGDebugUI/: BUILD
Swiftgram/SGGTranslate/: BUILD
Swiftgram/SGIQTP/: BUILD
Swiftgram/SGItemListUI/: BUILD
Swiftgram/SGPayWall/: BUILD
Swiftgram/SGRegDate/: BUILD
Swiftgram/SGSettingsUI/: BUILD
Swiftgram/SGSimpleSettings/: BUILD
Swiftgram/SGStatus/: BUILD
Swiftgram/SGWebSettings/: BUILD
Swiftgram/SGWebSettingsScheme/: BUILD
Telegram/: BUILD  PatchMinOSVersion.source.sh
Telegram/EGActionRequestHandler/: EGActionRequestHandler.swift
Telegram/NotificationService/: BUILD
build-system/: appstore-configuration.json  template_minimal_development_configuration.json
build-system/Make/: BuildConfiguration.py  Make.py  ProjectGeneration.py
build-system/example-configuration/: variables.bzl
exteraGram/EGAPI/: BUILD
exteraGram/EGAPIToken/: BUILD
exteraGram/EGAPIWebSettings/: BUILD
exteraGram/EGAppBadgeAssets/: BUILD
exteraGram/EGDebugUI/: BUILD
exteraGram/EGDeviceToken/: BUILD
exteraGram/EGDoubleTapMessageAction/: BUILD
exteraGram/EGEmojiKeyboardDefaultFirst/: BUILD
exteraGram/EGExternalVideoPlayer/: BUILD
exteraGram/EGGHSettingsScheme/: BUILD
exteraGram/EGIAP/: BUILD
exteraGram/EGInputToolbar/: BUILD
exteraGram/EGNY/: BUILD
exteraGram/EGPluginEngine/: BUILD
exteraGram/EGRecentSessionApiId/: BUILD
exteraGram/EGRegDateScheme/: BUILD
exteraGram/EGSettingsBundle/: BUILD
exteraGram/EGSettingsUI/: BUILD
exteraGram/EGStatus/: BUILD
exteraGram/EGSwiftUI/: BUILD
exteraGram/EGTabBarHeightModifier/: BUILD
exteraGram/FixConcurrencyBackport/: BUILD  concurrency-dylib.patch
exteraGram/Playground/: BUILD  generate_project.py
submodules/AccountContext/: BUILD
submodules/AttachmentTextInputPanelNode/: BUILD
submodules/AuthorizationUI/: BUILD
submodules/BuildConfig/: BUILD
submodules/Camera/: BUILD
submodules/ChatListUI/: BUILD
submodules/ChatPresentationInterfaceState/: BUILD
submodules/DebugSettingsUI/: BUILD
submodules/Display/: BUILD
submodules/GalleryUI/: BUILD
submodules/ItemListPeerItem/: BUILD
submodules/LegacyMediaPickerUI/: BUILD
submodules/LocalMediaResources/: BUILD
submodules/MediaPlayer/: BUILD
submodules/PremiumUI/: BUILD
submodules/SettingsUI/: BUILD
submodules/ShareController/: BUILD
submodules/TabBarUI/: BUILD
submodules/TelegramAudio/: BUILD
submodules/TelegramCallsUI/: BUILD
submodules/TelegramCore/: BUILD
submodules/TelegramStringFormatting/: BUILD
submodules/TelegramUI/: BUILD
submodules/TelegramUIPreferences/: BUILD
submodules/TelegramUniversalVideoContent/: BUILD
submodules/TranslateUI/: BUILD
submodules/WallpaperBackgroundNode/: BUILD
submodules/WebUI/: BUILD
(+526 files in other folders)
