http_file    = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
# MARK: exteraGram
new_git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

bazel_dep(name = "bazel_features", version = "1.33.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(name = "rules_xcodeproj")
local_path_override(
    module_name = "rules_xcodeproj",
    path = "./build-system/bazel-rules/rules_xcodeproj",
)

bazel_dep(name = "rules_apple", repo_name = "build_bazel_rules_apple")
local_path_override(
    module_name = "rules_apple",
    path = "./build-system/bazel-rules/rules_apple",
)

bazel_dep(name = "rules_swift", repo_name = "build_bazel_rules_swift")
local_path_override(
    module_name = "rules_swift",
    path = "./build-system/bazel-rules/rules_swift",
)

bazel_dep(name = "apple_support", repo_name = "build_bazel_apple_support")
local_path_override(
    module_name = "apple_support",
    path = "./build-system/bazel-rules/apple_support",
)

# MARK: exteraGram
new_git_repository(
    name = "flex_sdk",
    remote = "https://github.com/FLEXTool/FLEX.git",
    commit = "2bfba6715eff664ef84a02e8eb0ad9b5a609c684",
    build_file = "@//exteraGram/FLEX:FLEX.BUILD"
)

http_file(
    name = "cmake_tar_gz",
    urls = ["https://github.com/Kitware/CMake/releases/download/v4.1.2/cmake-4.1.2-macos-universal.tar.gz"],
    sha256 = "3be85f5b999e327b1ac7d804cbc9acd767059e9f603c42ec2765f6ab68fbd367",
)

http_file(
    name = "meson_tar_gz",
    urls = ["https://github.com/mesonbuild/meson/releases/download/1.6.0/meson-1.6.0.tar.gz"],
    sha256 = "999b65f21c03541cf11365489c1fad22e2418bb0c3d50ca61139f2eec09d5496",
)

http_file(
    name = "ninja-mac_zip",
    urls = ["https://github.com/ninja-build/ninja/releases/download/v1.12.1/ninja-mac.zip"],
    sha256 = "89a287444b5b3e98f88a945afa50ce937b8ffd1dcc59c555ad9b1baf855298c9",
)

http_file(
    name = "flatbuffers_zip",
    urls = ["https://github.com/google/flatbuffers/archive/refs/tags/v24.12.23.zip"],
    sha256 = "c5cd6a605ff20350c7faa19d8eeb599df6117ea4aabd16ac58a7eb5ba82df4e7",
)

# MARK: exteraGram — Python.xcframework for EGPluginEngine
# Downloaded automatically by Bazel at build time (~33 MB tar.gz, extracts to ~120 MB).
# Files are NOT committed to git (add to .gitignore if checking third-party/).
http_archive(
    name = "python_apple_support",
    urls = ["https://github.com/beeware/Python-Apple-support/releases/download/3.14-b9/Python-3.14-iOS-support.b9.tar.gz"],
    sha256 = "8e4123b543bf17fdae2e2c6c033434487752438431014eb12e6d833aa35927a8",
    # No strip_prefix — xcframework is at Python.xcframework/ in the archive root.
    build_file_content = """
load(
    "@build_bazel_rules_apple//apple:apple.bzl",
    "apple_static_xcframework_import",
)

# Static xcframework for device (ios-arm64) and simulator (ios-arm64_x86_64-simulator).
apple_static_xcframework_import(
    name = "Python",
    xcframework_imports = glob([
        "Python.xcframework/Info.plist",
        "Python.xcframework/ios-arm64/**",
        "Python.xcframework/ios-arm64_x86_64-simulator/**",
    ]),
    visibility = ["//visibility:public"],
)

# Python 3.14 standard library — bundled as a single zip to avoid rules_apple
# resource-flattening conflicts (__init__.py from every package would collide).
# EGPluginRuntime extracts this zip to Library/Caches/EGPythonStdlib/ at first launch.
# Excluded: test suite, GUI toolkits, __pycache__, compiled extensions, images.
genrule(
    name = "PythonStdlibZip",
    srcs = glob(
        ["Python.xcframework/lib/python3.14/**"],
        exclude = [
            "Python.xcframework/lib/python3.14/test/**",
            "Python.xcframework/lib/python3.14/tkinter/**",
            "Python.xcframework/lib/python3.14/turtledemo/**",
            "Python.xcframework/lib/python3.14/idlelib/**",
            "Python.xcframework/lib/python3.14/**/__pycache__/**",
            "**/*.so",
            "**/*.dylib",
            "**/*.pyc",
            "**/*.pyo",
            "**/*.png",
            "**/*.gif",
            "**/*.jpg",
            "**/*.jpeg",
            "**/*.ico",
            "**/*.tiff",
            "**/*.tif",
            "**/*.bmp",
            "**/*.xbm",
        ],
    ),
    outs = ["python3.14.zip"],
    # cmd uses triple-single-quotes to avoid closing the outer build_file_content string.
    # $$(pwd)/$(OUTS): Bazel expands $(OUTS) to relative path, shell expands $(pwd) to abs cwd.
    # ANCHOR locates os.py; two dirname steps up reach Python.xcframework/.
    cmd = '''
        OUTPATH="$$(pwd)/$(OUTS)"
        ANCHOR="$(location Python.xcframework/lib/python3.14/os.py)"
        XCFWDIR="$$(cd $$(dirname $$ANCHOR)/../.. && pwd)"
        (cd $$XCFWDIR && zip -qr $$OUTPATH lib/python3.14)
    ''',
    visibility = ["//visibility:public"],
)
""",
)

provisioning_profile_repository = use_extension("@build_bazel_rules_apple//apple:apple.bzl", "provisioning_profile_repository_extension")
#provisioning_profile_repository.setup(
#    fallback_profiles = "//path/to/some:filegroup", # Profiles to use if one isn't found locally
#)

bazel_dep(name = "build_configuration")
local_path_override(
    module_name = "build_configuration",
    path = "./build-input/configuration-repository",
)

bazel_dep(name = "sourcekit_bazel_bsp", version = "0.7.1")
local_path_override(
    module_name = "sourcekit_bazel_bsp",
    path = "build-system/bazel-rules/sourcekit-bazel-bsp",
)
